<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmartRoad</string>
    <string name="nav_open">Open navigation</string>
    <string name="nav_close">Close navigation</string>
    <!-- OpenStreetMap (osmdroid) used instead of Google Maps - no API key needed -->
    <string name="login_title">SmartRoad</string>
    <string name="login_subtitle">Road Hazard Reporting System</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="register_title">Create Account</string>
    <string name="name_hint">Full Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="btn_report_hazard">Report Hazard</string>
    <string name="btn_about">About</string>
    <string name="btn_logout">Log Out</string>
    <string name="hazard_type_label">Hazard Type</string>
    <string name="hazard_pothole">Pothole</string>
    <string name="hazard_flooding">Flooding</string>
    <string name="hazard_fallen_tree">Fallen Tree</string>
    <string name="hazard_accident">Traffic Accident</string>
    <string name="hazard_road_sign">Damaged Road Sign</string>
    <string name="hazard_traffic_light">Broken Traffic Light</string>
    <string name="description_hint">Describe the hazard…</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_submit_report">Submit Report</string>
    <string name="about_title">About SmartRoad</string>
    <string name="copyright">© 2026 SmartRoad Team. All rights reserved.</string>
    <string name="app_website">https://github.com/muhddika1-byte/SmartRoad</string>
    <string name="developer_details">SmartRoad Development Team

Team Members:
• Muhamad Adika bin Suhardi - 2024738635 - Developer
• Muhammad Idlan bin Fauzi - 2024738735 - UI/UX Designer
• Muhammad Haikal bin Ramli - 2024783583 - Project Manager
• Muhamad Illahi bin Noruldin - 2024783339 - System Analyst</string>
    <string name="status_new">New</string>
    <string name="status_investigating">Under Investigation</string>
    <string name="status_resolved">Resolved</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
</resources>
